--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,12 @@
 name: CI
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   racket-package-ci:
-    runs-on: ubuntu-latest    
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
     - uses: jackfirth/racket-package-ci-action@v0.1.2
       with:
-        name: racket-package-template
+        name: package-analysis
